# Vortelio

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SIGNING.md  audio_runner.go  llm_runner.go  proc_windows.go  pullai-linux-amd64  pullai-linux-arm64  pullai-start.vbs  pullai-ui.html
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
vortelio/: Makefile  go.mod  go.sum
vortelio-installer/: LICENSE.txt  pullai-installer.nsi
vortelio-pip/: README.md  pyproject.toml
vortelio-pip/src/vortelio_cli/: __main__.py
vortelio/cmd/vortelio/: main.go
vortelio/internal/agent/: agent.go
vortelio/internal/agent/runners/: crewai_server.py
vortelio/internal/cli/: root.go  tui.go  tui_agents.go  tui_cloud.go  tui_cloud_test.go
vortelio/internal/cli/commands/: cleanup.go  code.go  code_editor.go  code_prefs.go  command.go  import_ollama.go  misc.go  pull.go  quantize.go  run.go  service_other.go  service_windows.go  setup.go  shortcut.go  update.go
vortelio/internal/cloud/: cloud.go  cloud_test.go  crypto_other.go  crypto_windows.go  gemini_sysinstr_test.go  media.go
vortelio/internal/config/: config.go  config_test.go
vortelio/internal/firebase/: apikeys.go  client.go  store.go  usage.go
vortelio/internal/history/: history.go
vortelio/internal/hub/: hub.go  hub_test.go
vortelio/internal/mcp/: client.go  manager.go
vortelio/internal/runtime/: audio_runner.go  audio_runner_fix.py  backends.go  documents.go  image_runner.go  llm_runner.go  model_manager.go  output_dir.go  proc_other.go  proc_windows.go  python.go  runtime.go  sdcpp.go  sysmem_darwin.go  sysmem_linux.go  sysmem_other.go  sysmem_windows.go  threed_runner.go  tool_support.go  tools.go  video_runner.go  websearch.go  whisper_worker.go
vortelio/internal/server/: ratelimit.go  server.go  server_advanced.go  server_agent.go  server_agentic.go  server_auth.go  server_cloud.go  server_config.go  server_fs.go  server_generate.go  server_gguf.go  server_hf.go  server_history.go  server_hooks.go  server_hub.go  server_import.go  server_mcp.go  server_media_tools.go  server_observability.go  server_ollama_compat.go  server_openai_compat.go  server_openai_media.go  server_proxy.go  server_rag.go  server_run.go  server_skills.go  server_stripe.go  server_update.go  ui.html
vortelio/internal/stripe/: stripe.go
vortelio/internal/updater/: updater.go  updater_unix.go  updater_windows.go
vortelio/internal/version/: version.go
vortelio/pkg/progress/: ansi_windows.go  progress.go
website/: .gitignore
website/backend/: config.example.json  go.mod  go.sum
website/backend/cmd/server/: main.go
website/backend/internal/config/: config.go
website/backend/internal/firebase/: firebase.go
website/backend/internal/stripe/: stripe.go
website/frontend/: index.html  login.html  success.html
website/frontend/css/: style.css
website/frontend/js/: main.js
